@@ -13,6 +13,7 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
+[fix] Fix playback of some content (ie. Music videos)
 [fix] Calcuate n parameter to enable ratebypass
 [lang] translation updates from Weblate
         </news>
