@@ -1,4 +1,5 @@
 6.8.16
+[fix] Fix playback of some content (ie. Music videos)
 [fix] Calcuate n parameter to enable ratebypass
 [lang] translation updates from Weblate
 
